@@ -1,5 +1,9 @@
 2003-10-20  David Malcolm <david@davemalcolm.demon.co.uk>
 
+	* cong-dispspec.h, cong-editor-widget.h, cong-modification-cursor-change.c, global.h
+
+	Declaration fixes to help support 64-bit architectures, based on work by Andreas Schwab
+	
 	* cong-editor-area-structural.c, cong-editor-widget3.c
 
 	Structural headers now have an animated disclosure triangle for folding the content
